social links added

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     </div>
                     <div class="social mt-3">
                         <ul class="flex justify-center">
-                            <li class="mx-2"><a href="javascript:void(0)">
+                            <li class="mx-2"><a target="_blank" href="https://www.facebook.com/ShamsulHudaKuttikkattoor">
                                 <img src="assets/facebook-logo.svg" width="25" alt="">
                             </a></li>
-                            <li class="mx-2"><a href="javascript:void(0)">
+                            <li class="mx-2"><a target="_blank" href="https://instagram.com/shamsul_huda_kuttikkattur?igshid=1c90b61kzwtsf">
                                 <img src="assets/instagram.svg" width="25" alt="">
                             </a></li>
-                            <li class="mx-2"><a href="javascript:void(0)">
+                            <li class="mx-2"><a target="_blank" href="https://www.youtube.com/channel/UCfZ2RjtePdJutaE6kHrW5HA/video">
                                 <img src="assets/youtube.svg" width="25" alt="">
                             </a></li>
                         </ul>
